--- a/config-dev.yml
+++ b/config-dev.yml
@@ -1,7 +1,7 @@
 server : 4141
 
 config :
-  info : ymx at now is update add bus
+  info : ymx at now is update add bus add singe3366
 
 music:
   people : wanglihaon232
